@startuml

class AppProgramas {
  +main(args : String[]) : void
}

class Cadena {
  -nombre : String
  -listaProgramas : ArrayList<Programa>

  +Cadena(nombre : String)
  +getListaProgramas() : ArrayList<Programa>
  +setListaProgramas(listaProgramas : ArrayList<Programa>) : void
  +getNombre() : String
  +setNombre(nombre : String)
  +insertarPrograma(programa : Programa) : void
  +borrarPrograma(programa : Programa) : void
  +toString() : String
}

class Programa {
  -nombre : String
  -cadena : Cadena
  -temporadas : int
  -listaEmpleados : ArrayList<Empleado>
  -listaInvitados : ArrayList<Invitado>
  -director : Empleado

  +Programa(nombre : String, cadena : Cadena, nombreDirector : String)
  +getNombre() : String
  +getCadena() : Cadena
  +getTemporadas() : int
  +getListaEmpleados() : ArrayList<Empleado>
  +getListaInvitados() : ArrayList<Invitado>
  +getDirector() : Empleado
  +insertarEmpleado(empleados : Empleado...) : void
  +borrarEmpleado(empleado : Empleado) : void
  +insertarInvitado(nombre : String, profesion : String, temporada : int) : void
  +borrarInvitado(invitado : Invitado) : void
  +invitadosTemporada(temporada : int) : void
  +vecesInvitado(nombre : String) : int
  +rastrearInvitado(nombre : String) : void
  +buscarInvitado(nombre : String) : boolean
  +toString() : String
}

class Empleado {
  -contador : int {static}
  -id : String
  -nombre : String
  -cargo : String
  -director : Empleado

  +Empleado(nombre : String, cargo : String, director : Empleado)
  -generarId() : String
  +getContador() : int {static}
  +setContador(contador : int) : void {static}
  +getId() : String
  +getNombre() : String
  +setNombre(nombre : String)
  +getCargo() : String
  +setCargo(cargo : String)
  +getDirector() : Empleado
  +setDirector(director : Empleado)
  +toString() : String
}

class Invitado {
  -nombre : String
  -profesion : String
  -fechaVisita : LocalDate
  -temporada : int

  +Invitado(nombre : String, profesion : String, temporada : int)
  +getNombre() : String
  +setNombre(nombre : String)
  +getProfesion() : String
  +setProfesion(profesion : String)
  +getFechaVisita() : LocalDate
  +setFechaVisita(fechaVisita : LocalDate)
  +getTemporada() : int
  +setTemporada(temporada : int)
  +preguntarFecha() : void
  +toString() : String
}

AppProgramas --> Cadena
AppProgramas --> Programa

Cadena "1" o-- "0..*" Programa : contiene
Programa "1" --> "1" Cadena : pertenece

Programa "1" *-- "0..*" Empleado : composicion
Programa "1" *-- "0..*" Invitado : composicion

Empleado "0..1" --> "1" Empleado : director

@enduml
